--- a/workspace.jsonc
+++ b/workspace.jsonc
@@ -46,15 +46,16 @@
         "graphql": "15.8.0",
         "graphql-request": "4.3.0",
         "react-error-boundary": "3.1.4",
-        "typescript": "4.9.3",
+        "typescript": "4.9.3"
+      },
+      "peerDependencies": {
         "axios": "1.2.2",
         "bcryptjs": "2.4.3",
         "date-fns": "2.29.3",
         "date-fns-tz": "1.3.7",
-        "mongoose": "6.8.3",
-        "@shopify/shopify-api": "^5.3.0"
-      },
-      "peerDependencies": {}
+        "mongoose": "6.8.4",
+        "@shopify/shopify-api": "5.3.0"
+      }
     },
     "linkCoreAspects": true
   },
