--- a/bsd/envs/jest-esm/env.jsonc
+++ b/bsd/envs/jest-esm/env.jsonc
@@ -5,6 +5,10 @@
  **/
 {
   "policy": {
+    "devDependencies": {
+      "@types/react": "^18.0.7",
+      "@types/react-dom": "^18.0.6"
+    },
     "peers": [
       {
         "name": "react",
@@ -15,77 +19,8 @@
         "name": "react-dom",
         "version": "18.2.0",
         "supportedRange": "^18.2.0"
-      },
-      {
-        "name": "@shopify/polaris",
-        "version": "10.19.0",
-        "supportedRange": "^10.19.0"
-      },
-      {
-        "name": "@shopify/polaris-icons",
-        "version": "6.7.0",
-        "supportedRange": "^6.7.0"
-      },
-      {
-        "name": "@shopify/react-form",
-        "version": "2.5.0",
-        "supportedRange": "^2.5.0"
-      },
-      {
-        "name": "@shopify/react-i18n",
-        "version": "7.5.1",
-        "supportedRange": "^7.5.1"
       }
     ],
-    "dev": [
-      {
-        "name": "@types/react",
-        "version": "^18.0.7",
-        "hidden": true,
-        "force": true
-      },
-      {
-        "name": "@types/react-dom",
-        "version": "^18.0.6",
-        "hidden": true,
-        "force": true
-      },
-      {
-        "name": "@types/jest",
-        "version": "^26.0.20",
-        "hidden": true,
-        "force": true
-      },
-      {
-        "name": "@types/node",
-        "version": "^12.20.4",
-        "hidden": true,
-        "force": true
-      },
-      {
-        "name": "@testing-library/react",
-        "version": "^13.4.0",
-        "hidden": true,
-        "force": true
-      },
-      {
-        "name": "@types/testing-library__jest-dom",
-        "version": "^5.9.5",
-        "hidden": true,
-        "force": true
-      },
-      {
-        "name": "@babel/runtime",
-        "version": "^7.20.0",
-        "hidden": true,
-        "force": true
-      }
-    ],
-    "devDependencies": {
-      "@types/react": "^18.0.17",
-      "@types/react-dom": "^18.0.6",
-      "@babel/runtime": "^7.20.0"
-    },
     "runtime": []
   }
 }
