--- a/workspace.jsonc
+++ b/workspace.jsonc
@@ -38,22 +38,36 @@
      */
     "packageManager": "teambit.dependencies/pnpm",
     "policy": {
-      "dependencies": {
+      "devDependencies": {
+        "@types/react": "^18.0.0",
+        "@types/react-dom": "^18.0.0",
+        "@types/jest": "^26.0.20",
+        "@types/node": "^12.20.4",
+        "@types/testing-library__jest-dom": "^5.9.5",
+        "@testing-library/react-hooks": "^8.0.1",
+        "@testing-library/react": "^13.4.0",
+        "@testing-library/dom": "8.20.0",
+        "@babel/runtime": "^7.20.0",
         "@teambit/react.react-env": "0.0.23",
         "@teambit/react.ui.docs-app": "0.0.203",
         "@teambit/typescript.typescript-compiler": "0.0.3",
-        "@testing-library/dom": "8.20.0",
         "graphql": "15.8.0",
         "graphql-request": "4.3.0",
         "react-error-boundary": "3.1.4",
         "typescript": "4.9.3"
       },
       "peerDependencies": {
-        "axios": "1.2.2",
         "bcryptjs": "2.4.3",
-        "date-fns": "2.29.3",
-        "date-fns-tz": "1.3.7",
         "mongoose": "6.8.4",
+        "@shopify/polaris": "^10.19.0",
+        "@shopify/polaris-icons": "^6.7.0",
+        "@shopify/react-form": "^2.5.0",
+        "@shopify/react-i18n": "^7.5.1",
+        "axios": "^1.2.2",
+        "date-fns": "^2.29.3",
+        "date-fns-tz": "^1.3.7",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
         "@shopify/shopify-api": "5.3.0"
       }
     },
