--- a/bsd/envs/jest-esm/env.jsonc
+++ b/bsd/envs/jest-esm/env.jsonc
@@ -7,7 +7,12 @@
   "policy": {
     "devDependencies": {
       "@types/react": "^18.0.7",
-      "@types/react-dom": "^18.0.6"
+      "@types/react-dom": "^18.0.6",
+      "@babel/runtime": "^7.20.0",
+      "@teambit/react.react-env": "0.0.23",
+      "@teambit/react.ui.docs-app": "0.0.203",
+      "@teambit/typescript.typescript-compiler": "0.0.3",
+      "typescript": "4.9.3"
     },
     "peers": [
       {
