--- a/workspace.jsonc
+++ b/workspace.jsonc
@@ -45,24 +45,24 @@
         "@types/node": "^12.20.4"
       },
       "peerDependencies": {
+        "bcryptjs": "2.4.3",
+        "mongoose": "6.8.4",
         "@shopify/polaris": "^10.19.0",
         "@shopify/polaris-icons": "^6.7.0",
         "@shopify/react-form": "^2.5.0",
         "@shopify/react-i18n": "^7.5.1",
-        "@shopify/shopify-api": "5.3.0",
         "axios": "^1.2.2",
-        "bcryptjs": "2.4.3",
         "date-fns": "^2.29.3",
         "date-fns-tz": "^1.3.7",
-        "mongoose": "6.8.4",
         "react": "^18.2.0",
-        "react-dom": "^18.2.0"
+        "react-dom": "^18.2.0",
+        "@shopify/shopify-api": "5.3.0"
       }
     },
     "linkCoreAspects": true
   },
   "teambit.component/issues": {
-    "ignoreIssues": ["MultipleEnvs"]
+    "ignoreIssues": ["MultipleEnvs", "CircularDependencies"]
   },
   /**
    * workspace variants allow to set different subsets of configuration for components in your
