--- a/workspace.jsonc
+++ b/workspace.jsonc
@@ -42,7 +42,20 @@
         "@types/react": "^18.0.0",
         "@types/react-dom": "^18.0.0",
         "@types/jest": "^26.0.20",
-        "@types/node": "^12.20.4"
+        "@types/node": "^12.20.4",
+        "@types/testing-library__jest-dom": "^5.9.5",
+        "@testing-library/react-hooks": "^8.0.1",
+        "@testing-library/react": "^13.4.0",
+        "@testing-library/dom": "8.20.0",
+        "graphql": "15.8.0",
+        "graphql-request": "4.3.0",
+        "react-error-boundary": "3.1.4",
+        "@babel/runtime": "^7.20.0",
+        "@babel/core": "^7.20.0",
+        "@teambit/react.react-env": "0.0.23",
+        "@teambit/react.ui.docs-app": "0.0.203",
+        "@teambit/typescript.typescript-compiler": "0.0.3",
+        "typescript": "4.9.3"
       },
       "peerDependencies": {
         "bcryptjs": "2.4.3",
