add fullcalendar to workspace

--- a/workspace.jsonc
+++ b/workspace.jsonc
@@ -39,6 +39,12 @@
     "packageManager": "teambit.dependencies/pnpm",
     "policy": {
       "peerDependencies": {
+        "@fullcalendar/core": "^6.0.2",
+        "@fullcalendar/daygrid": "^6.0.2",
+        "@fullcalendar/interaction": "^6.0.2",
+        "@fullcalendar/list": "^6.0.2",
+        "@fullcalendar/react": "^6.0.2",
+        "@fullcalendar/timegrid": "^6.0.2",
         "bcryptjs": "2.4.3",
         "mongoose": "6.8.4",
         "@shopify/polaris": "^10.19.0",
