--- a/workspace.jsonc
+++ b/workspace.jsonc
@@ -55,8 +55,7 @@
         "date-fns": "^2.29.3",
         "date-fns-tz": "^1.3.7",
         "react": "^18.2.0",
-        "react-dom": "^18.2.0",
-        "@shopify/shopify-api": "5.3.0"
+        "react-dom": "^18.2.0"
       }
     },
     "linkCoreAspects": true
