--- a/workspace.jsonc
+++ b/workspace.jsonc
@@ -38,6 +38,7 @@
      */
     "packageManager": "teambit.dependencies/pnpm",
     "policy": {
+      "dependencies": {},
       "peerDependencies": {
         "@fullcalendar/core": "^6.0.2",
         "@fullcalendar/daygrid": "^6.0.2",
@@ -45,15 +46,15 @@
         "@fullcalendar/list": "^6.0.2",
         "@fullcalendar/react": "^6.0.2",
         "@fullcalendar/timegrid": "^6.0.2",
-        "bcryptjs": "2.4.3",
-        "mongoose": "6.8.4",
         "@shopify/polaris": "^10.19.0",
         "@shopify/polaris-icons": "^6.7.0",
         "@shopify/react-form": "^2.5.0",
         "@shopify/react-i18n": "^7.5.1",
         "axios": "^1.2.2",
+        "bcryptjs": "2.4.3",
         "date-fns": "^2.29.3",
         "date-fns-tz": "^1.3.7",
+        "mongoose": "6.8.4",
         "react": "^18.2.0",
         "react-dom": "^18.2.0"
       }
@@ -71,7 +72,7 @@
     /**
      * "*" is a special rule which applied on all components in the workspace.
      **/
-    "{preview/**}, {components/**}, {hooks/**}, {providers/**}, {helpers/**}, {preview/**}": {
+    "{preview/**}, {components/**}, {components/*/**}, {hooks/**}, {providers/**}, {helpers/**}, {preview/**}": {
       "jamalsoueidan.bsd/envs/jest-esm": {}
     }
   }
