--- a/bsd/envs/jest-esm/typescript/tsconfig.json
+++ b/bsd/envs/jest-esm/typescript/tsconfig.json
@@ -1,4 +1,4 @@
 {
-  "extends": "@teambit/react/typescript/tsconfig.json",
+  "extends": "@teambit/react.react-env/config/tsconfig.json",
   "include": ["**/*", "**/*.json"]
 }
