add linter to esm env

--- a/bsd/envs/jest-esm/config/tsconfig.json
+++ b/bsd/envs/jest-esm/config/tsconfig.json
@@ -1,4 +1,7 @@
 {
   "extends": "@teambit/react.react-env/config/tsconfig.json",
+  "compilerOptions": {
+    "allowJs": false
+  },
   "include": ["**/*", "**/*.json"]
 }
