--- a/bsd/envs/jest-esm/env.jsonc
+++ b/bsd/envs/jest-esm/env.jsonc
@@ -13,7 +13,9 @@
       "@teambit/react.react-env": "0.0.23",
       "@teambit/react.ui.docs-app": "0.0.203",
       "@teambit/typescript.typescript-compiler": "0.0.3",
-      "typescript": "4.9.3"
+      "typescript": "4.9.3",
+      "@teambit/defender.eslint-linter": "0.0.6",
+      "eslint": "8.31.0"
     },
     "peers": [
       {
