--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@ stats.html
 # We ignore lock files so they don't get a package manager mis-match
 # Without this, they may get a warning if using a different package manager to us
 yarn.lock
+.yarn/
 package-lock.json
 .env
 
