--- a/bsd/envs/jest-esm/env.jsonc
+++ b/bsd/envs/jest-esm/env.jsonc
@@ -15,7 +15,7 @@
       "@teambit/typescript.typescript-compiler": "0.0.3",
       "typescript": "4.9.3",
       "@teambit/defender.eslint-linter": "0.0.6",
-      "eslint": "8.31.0"
+      "@teambit/react.eslint-config-bit-react": "0.0.721"
     },
     "peers": [
       {
