--- a/bsd/envs/jest-esm/env.jsonc
+++ b/bsd/envs/jest-esm/env.jsonc
@@ -15,7 +15,8 @@
       "@teambit/typescript.typescript-compiler": "0.0.3",
       "typescript": "4.9.3",
       "@teambit/defender.eslint-linter": "0.0.6",
-      "@teambit/react.eslint-config-bit-react": "0.0.721"
+      "@teambit/react.eslint-config-bit-react": "0.0.721",
+      "eslint-plugin-sort-keys": "2.3.5"
     },
     "peers": [
       {
