fix save-bar-context rerendering

--- a/workspace.jsonc
+++ b/workspace.jsonc
@@ -29,6 +29,9 @@
      **/
     "defaultScope": "jamalsoueidan.bsf"
   },
+  "teambit.component/issues": {
+    "ignoreIssues": ["CircularDependencies"]
+  },
   /**
    * main configuration for component dependency resolution.
    **/
