--- a/bsd/envs/jest-esm/config/tsconfig.json
+++ b/bsd/envs/jest-esm/config/tsconfig.json
@@ -1,8 +1,8 @@
 {
   "extends": "@teambit/react.react-env/config/tsconfig.json",
   "compilerOptions": {
-    "allowJs": false,
-    "strict": true
+    "allowJs": false
+    //"strict": true
   },
   "include": ["**/*", "**/*.json"]
 }
