--- a/workspace.jsonc
+++ b/workspace.jsonc
@@ -42,6 +42,7 @@
     "packageManager": "teambit.dependencies/yarn",
     "policy": {
       "devDependencies": {
+        "mongodb-memory-server": "^8.11.4",
         "@types/bcryptjs": "2.4.2"
       },
       "peerDependencies": {
