--- a/workspace.jsonc
+++ b/workspace.jsonc
@@ -56,7 +56,7 @@
         "@shopify/polaris-icons": "^6.7.0",
         "@shopify/react-form": "^2.5.0",
         "@shopify/react-i18n": "^7.5.1",
-        "axios": "^1.2.2",
+        "superagent": "^8.0.9",
         "bcryptjs": "2.4.3",
         "date-fns": "^2.29.3",
         "date-fns-tz": "^1.3.7",
