--- a/.prettierignore
+++ b/.prettierignore
@@ -23,4 +23,5 @@ package-lock.json
 public/bit
 pnpm-lock.yaml
 .prettierrc.js
-bsd/testing-library
+bsd/testing-library/react
+bsd/testing-library/react-hooks
