--- a/bsd/envs/jest-esm/config/tsconfig.json
+++ b/bsd/envs/jest-esm/config/tsconfig.json
@@ -2,7 +2,8 @@
   "extends": "@teambit/react.react-env/config/tsconfig.json",
   "compilerOptions": {
     "allowJs": false,
-    "strict": true
+    "strict": true,
+    "preserveSymlinks": true
   },
   "include": ["**/*", "**/*.json"]
 }
