--- a/workspace.jsonc
+++ b/workspace.jsonc
@@ -63,7 +63,8 @@
         "date-fns-tz": "^2.0.0",
         "mongoose": "6.8.4",
         "react": "^18.2.0",
-        "react-dom": "^18.2.0"
+        "react-dom": "^18.2.0",
+        "react-router-dom": "^6.6.1"
       }
     },
     "linkCoreAspects": true
