(bsf) add custom buttons to booking-calendar

--- a/workspace.jsonc
+++ b/workspace.jsonc
@@ -47,12 +47,13 @@
         "@faker-js/faker": "7.6.0"
       },
       "peerDependencies": {
-        "@fullcalendar/core": "^6.0.2",
-        "@fullcalendar/daygrid": "^6.0.2",
-        "@fullcalendar/interaction": "^6.0.2",
-        "@fullcalendar/list": "^6.0.2",
-        "@fullcalendar/react": "^6.0.2",
-        "@fullcalendar/timegrid": "^6.0.2",
+        "@fullcalendar/core": "^6.1.4",
+        "@fullcalendar/daygrid": "^6.1.4",
+        "@fullcalendar/interaction": "^6.1.4",
+        "@fullcalendar/list": "^6.1.4",
+        "@fullcalendar/react": "^6.1.4",
+        "@fullcalendar/timegrid": "^6.1.4",
+        "@fullcalendar/multimonth": "^6.1.4",
         "@shopify/polaris": "^10.27.2",
         "@shopify/polaris-icons": "^6.11.1",
         "@shopify/react-form": "^2.5.0",
