--- a/workspace.jsonc
+++ b/workspace.jsonc
@@ -3,6 +3,8 @@
  * for full documentation, please see: https://bit.dev/docs/workspace/workspace-configuration
  **/ {
   "$schema": "https://static.bit.dev/teambit/schemas/schema.json",
+
+  "jamalsoueidan.bsd/app": {},
   /**
    * main configuration of the Bit workspace.
    **/
@@ -42,30 +44,33 @@
     "packageManager": "teambit.dependencies/yarn",
     "policy": {
       "dependencies": {
+        "@faker-js/faker": "7.6.0",
+        "@types/express": "4.17.17",
         "mongodb-memory-server": "8.11.4",
-        "wait-for-expect": "^3.0.2",
-        "@faker-js/faker": "7.6.0"
+        "wait-for-expect": "^3.0.2"
       },
       "peerDependencies": {
         "@fullcalendar/core": "^6.1.4",
         "@fullcalendar/daygrid": "^6.1.4",
         "@fullcalendar/interaction": "^6.1.4",
         "@fullcalendar/list": "^6.1.4",
+        "@fullcalendar/multimonth": "^6.1.4",
         "@fullcalendar/react": "^6.1.4",
         "@fullcalendar/timegrid": "^6.1.4",
-        "@fullcalendar/multimonth": "^6.1.4",
         "@shopify/polaris": "^10.27.2",
         "@shopify/polaris-icons": "^6.11.1",
         "@shopify/react-form": "^2.5.0",
         "@shopify/react-i18n": "^7.6.0",
-        "superagent": "^8.0.9",
         "bcryptjs": "2.4.3",
         "date-fns": "^2.29.3",
         "date-fns-tz": "^2.0.0",
         "mongoose": "6.8.4",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "react-router-dom": "^6.6.1"
+        "react-router-dom": "^6.6.1",
+        "superagent": "^8.0.9",
+        "express": "4.18.2",
+        "express-validator": "^6.14.2"
       }
     },
     "linkCoreAspects": true
