--- a/workspace.jsonc
+++ b/workspace.jsonc
@@ -47,7 +47,8 @@
         "@faker-js/faker": "7.6.0",
         "@types/express": "4.17.17",
         "mongodb-memory-server": "8.11.4",
-        "wait-for-expect": "^3.0.2"
+        "wait-for-expect": "^3.0.2",
+        "supertest": "6.3.3"
       },
       "peerDependencies": {
         "@fullcalendar/core": "^6.1.4",
