--- a/workspace.jsonc
+++ b/workspace.jsonc
@@ -73,7 +73,9 @@
         "superagent": "^8.0.9",
         "express": "4.18.2",
         "express-validator": "^6.14.2",
-        "react-query": "^3.39.2"
+        "react-query": "^3.39.2",
+        "@casl/ability": "^6.3.3",
+        "@casl/react": "^3.1.0"
       }
     },
     "linkCoreAspects": true
