--- a/workspace.jsonc
+++ b/workspace.jsonc
@@ -1,9 +1,8 @@
 /**
  * this is the main configuration file of your bit workspace.
  * for full documentation, please see: https://bit.dev/docs/workspace/workspace-configuration
- **/ {
+ **/{
   "$schema": "https://static.bit.dev/teambit/schemas/schema.json",
-
   //"jamalsoueidan.bsd/app": {},
   /**
    * main configuration of the Bit workspace.
@@ -32,7 +31,10 @@
     "defaultScope": "jamalsoueidan.frontend"
   },
   "teambit.component/issues": {
-    "ignoreIssues": ["CircularDependencies", "ImportNonMainFiles"]
+    "ignoreIssues": [
+      "CircularDependencies",
+      "ImportNonMainFiles"
+    ]
   },
   /**
    * main configuration for component dependency resolution.
@@ -45,15 +47,19 @@
     "policy": {
       "dependencies": {
         "@faker-js/faker": "7.6.0",
-        "@types/express": "4.17.17",
-        "mongodb-memory-server": "8.11.4",
-        "wait-for-expect": "^3.0.2",
-        "supertest": "6.3.3",
-        "@testing-library/react": "13.4.0",
         "@testing-library/dom": "8.17.1",
-        "@testing-library/react-hooks": "8.0.1"
+        "@testing-library/react": "13.4.0",
+        "@testing-library/react-hooks": "8.0.1",
+        "@types/express": "4.17.17",
+        "@types/styled-components": "5.1.26",
+        "mongodb-memory-server": "8.11.4",
+        "styled-components": "5.3.6",
+        "supertest": "6.3.3",
+        "wait-for-expect": "^3.0.2"
       },
       "peerDependencies": {
+        "@casl/ability": "^6.3.3",
+        "@casl/react": "^3.1.0",
         "@fullcalendar/core": "^6.1.4",
         "@fullcalendar/daygrid": "^6.1.4",
         "@fullcalendar/interaction": "^6.1.4",
@@ -61,25 +67,23 @@
         "@fullcalendar/multimonth": "^6.1.4",
         "@fullcalendar/react": "^6.1.4",
         "@fullcalendar/timegrid": "^6.1.4",
-        "@shopify/shopify-app-express": "^1.1.0",
         "@shopify/polaris": "^10.27.2",
         "@shopify/polaris-icons": "^6.11.1",
         "@shopify/react-form": "^2.5.0",
         "@shopify/react-i18n": "^7.6.0",
-        "generate-password": "^1.7.0",
+        "@shopify/shopify-app-express": "^1.1.0",
         "bcryptjs": "2.4.3",
         "date-fns": "^2.29.3",
         "date-fns-tz": "^2.0.0",
+        "express": "4.18.2",
+        "express-validator": "^6.14.2",
+        "generate-password": "^1.7.0",
         "mongoose": "6.8.4",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "react-router-dom": "^6.6.1",
-        "superagent": "^8.0.9",
-        "express": "4.18.2",
-        "express-validator": "^6.14.2",
         "react-query": "^3.39.2",
-        "@casl/ability": "^6.3.3",
-        "@casl/react": "^3.1.0"
+        "react-router-dom": "^6.6.1",
+        "superagent": "^8.0.9"
       }
     },
     "linkCoreAspects": true
